src/objects/MSATeamingPartner__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MSA Teaming Partners</relationshipLabel>
        <relationshipName>MSA_Teaming_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>MSA Teaming Partners</relationshipLabel>
        <relationshipName>MSA_Teaming_Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MSA Teaming Partner</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>MSA Teaming Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSA Teaming Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>